change the buttomn position

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   }
 
   #on {
-    background: linear-gradient(45deg, #28a745, #85e085);
+    background: linear-gradient(45deg, #e74c3c, #f78ca0);
     color: white;
   }
 
   #off {
-    background: linear-gradient(45deg, #e74c3c, #f78ca0);
+    background: linear-gradient(45deg, #28a745, #85e085);
     color: white;
   }
 
@@ -63,8 +63,8 @@
 </head>
 <body>
   <h1>Smart Motor Control</h1>
-  <button id="on">Motor ON</button>
-  <button id="off">Motor OFF</button>
+  <button id="on">Motor OFF</button>
+  <button id="off">Motor ON</button>
 
   <script>
     // 🔹 Paste your Firebase config here
